--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 :root {
   /* Bluish–grey palette */
   --primary: #2d6cdf;   /* vibrant blue for header */
-  --secondary: #1e3a5f; /* deep slate‑blue for nav & accents */
+  --secondary: #1e3a5f; /* deep slate-blue for nav & accents */
   --light: #f5f7fa;     /* soft grey background */
   --dark: #343a40;      /* charcoal text */
 }
@@ -69,6 +69,15 @@ ul{
   padding:1rem;
   box-shadow:0 2px 4px rgba(0,0,0,0.05);
 }
+.profile-img{
+  width:150px;
+  height:150px;
+  border-radius:50%;
+  object-fit:cover;
+  border:3px solid var(--secondary);
+  float:left;
+  margin:0 1rem 1rem 0;
+}
 footer{
   text-align:center;
   padding:2rem 0;
@@ -91,6 +100,7 @@ footer{
 
 <section id="about-me">
   <h2>About Me</h2>
+  <img src="https://github.com/ali-shalah/graph-ai-portfolio2/blob/main/Random%20person.jpg?raw=true" alt="Profile photo of Sajjad Jasim" class="profile-img">
   <p>I'm a PhD-level epidemiologist with seven years of combined laboratory and applied research experience, specializing in global disease epidemiology, vaccine science, and policy. My work bridges rigorous statistical analysis—including longitudinal and survival methods—with real-world program evaluation.</p>
   <p>Technical skills include R, SAS, and STATA for data analysis, alongside program planning, monitoring, and evaluation expertise. I’m fluent in French and Arabic and have practical knowledge of Swahili.</p>
   <p>Current position: Doctoral Researcher, University of Pittsburgh Graduate School of Public Health (dissertation defense expected May 2025).</p>
@@ -98,11 +108,11 @@ footer{
 
 <section id="about-course">
   <h2>About the Course</h2>
-  <p><strong>Generative AI for Work & Research</strong> is a 2‑month guided program delivered by GRAPH Courses. It combines weekly live workshops, hands‑on help sessions, private community forums, personalized feedback, and capstone coaching. Graduates earn a shareable certificate and lifetime access to tutorial materials.</p>
+  <p><strong>Generative AI for Work & Research</strong> is a 2-month guided program delivered by GRAPH Courses. It combines weekly live workshops, hands-on help sessions, private community forums, personalized feedback, and capstone coaching. Graduates earn a shareable certificate and lifetime access to tutorial materials.</p>
   
   <h3>Bootcamp Features</h3>
   <ul>
-    <li>No‑code AI tools for task automation</li>
+    <li>No-code AI tools for task automation</li>
     <li>Live workshops &amp; help sessions</li>
     <li>Personalized assessment feedback</li>
     <li>Capstone project mentoring</li>
@@ -114,34 +124,34 @@ footer{
     <div class="card">
       <h4>Module 1 – Websites, Documents & Presentations</h4>
       <ul>
-        <li>How LLMs are trained &amp; major providers</li>
+        <li>How LLMs are trained & major providers</li>
         <li>Generating Markdown, LaTeX, HTML</li>
-        <li>No‑code research websites</li>
+        <li>No-code research websites</li>
         <li>AI tools for scientific communication</li>
       </ul>
     </div>
     <div class="card">
-      <h4>Module 2 – AI‑Automated Data Analysis</h4>
+      <h4>Module 2 – AI-Automated Data Analysis</h4>
       <ul>
         <li>Quick data analysis with ChatGPT Code Interpreter</li>
         <li>Automated dashboards with TheBricks</li>
         <li>Dataset processing with Julius</li>
-        <li>Automated reports &amp; visualizations</li>
+        <li>Automated reports & visualizations</li>
       </ul>
     </div>
     <div class="card">
       <h4>Module 3 – GenAI for Research & Text Analysis</h4>
       <ul>
         <li>Efficient literature reviews</li>
-        <li>Text classification &amp; sentiment analysis</li>
-        <li>Knowledge maps &amp; summarization workflows</li>
+        <li>Text classification & sentiment analysis</li>
+        <li>Knowledge maps & summarization workflows</li>
       </ul>
     </div>
     <div class="card">
       <h4>Module 4 – Custom GPTs & Chatbots</h4>
       <ul>
         <li>LLM architecture, context windows, RAG</li>
-        <li>Building domain‑specific GPTs</li>
+        <li>Building domain-specific GPTs</li>
         <li>Interactive chatbots with Botpress</li>
       </ul>
     </div>
@@ -156,7 +166,7 @@ footer{
     <div class="card">
       <h4>Module 6 – GenAI for Communication & Outreach</h4>
       <ul>
-        <li>AI‑generated research summaries</li>
+        <li>AI-generated research summaries</li>
         <li>Scientific figures & diagrams</li>
         <li>Video abstracts with minimal effort</li>
       </ul>
@@ -166,7 +176,7 @@ footer{
       <ul>
         <li>Peer feedback & coaching</li>
         <li>Final project presentation</li>
-        <li>Public Q&amp;A session</li>
+        <li>Public Q&A session</li>
       </ul>
     </div>
   </div>
