--- a/index.html
+++ b/index.html
@@ -208,5 +208,7 @@ footer{
 <footer>
   <p>&copy; 2025 Sajjad Jasim | Generative AI for Work & Research Portfolio</p>
 </footer>
+  <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/06/05/18/20250605184456-5Q9ZA4IN.js"></script>
 </body>
 </html>
