--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <style>
 :root {
   /* Bluish–grey palette */
-  --primary: #2d6cdf;   /* vibrant blue for header */
-  --secondary: #1e3a5f; /* deep slate-blue for nav & accents */
-  --light: #f5f7fa;     /* soft grey background */
-  --dark: #343a40;      /* charcoal text */
+  --primary: #2d6cdf;
+  --secondary: #1e3a5f;
+  --light: #f5f7fa;
+  --dark: #343a40;
 }
 body{
   font-family: Arial, sans-serif;
@@ -42,21 +42,14 @@ nav a{
   font-weight:bold;
   transition:opacity 0.2s ease;
 }
-nav a:hover{
-  opacity:0.75;
-}
+nav a:hover{opacity:0.75;}
 section{
   max-width:900px;
   margin:2rem auto;
   padding:0 1rem;
 }
-h2{
-  color:var(--secondary);
-  margin-top:0;
-}
-ul{
-  padding-left:1.25rem;
-}
+h2{color:var(--secondary);margin-top:0;}
+ul{padding-left:1.25rem;}
 .module-grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
@@ -113,7 +106,7 @@ footer{
   <h3>Bootcamp Features</h3>
   <ul>
     <li>No-code AI tools for task automation</li>
-    <li>Live workshops &amp; help sessions</li>
+    <li>Live workshops & help sessions</li>
     <li>Personalized assessment feedback</li>
     <li>Capstone project mentoring</li>
     <li>Shareable certificate upon completion</li>
@@ -121,64 +114,13 @@ footer{
 
   <h3>Course Modules</h3>
   <div class="module-grid">
-    <div class="card">
-      <h4>Module 1 – Websites, Documents & Presentations</h4>
-      <ul>
-        <li>How LLMs are trained & major providers</li>
-        <li>Generating Markdown, LaTeX, HTML</li>
-        <li>No-code research websites</li>
-        <li>AI tools for scientific communication</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 2 – AI-Automated Data Analysis</h4>
-      <ul>
-        <li>Quick data analysis with ChatGPT Code Interpreter</li>
-        <li>Automated dashboards with TheBricks</li>
-        <li>Dataset processing with Julius</li>
-        <li>Automated reports & visualizations</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 3 – GenAI for Research & Text Analysis</h4>
-      <ul>
-        <li>Efficient literature reviews</li>
-        <li>Text classification & sentiment analysis</li>
-        <li>Knowledge maps & summarization workflows</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 4 – Custom GPTs & Chatbots</h4>
-      <ul>
-        <li>LLM architecture, context windows, RAG</li>
-        <li>Building domain-specific GPTs</li>
-        <li>Interactive chatbots with Botpress</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 5 – AI for Task Automation</h4>
-      <ul>
-        <li>Email response automations</li>
-        <li>AI agents for literature monitoring</li>
-        <li>Browser control workflows</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 6 – GenAI for Communication & Outreach</h4>
-      <ul>
-        <li>AI-generated research summaries</li>
-        <li>Scientific figures & diagrams</li>
-        <li>Video abstracts with minimal effort</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Module 7 – Capstone Project & Showcase</h4>
-      <ul>
-        <li>Peer feedback & coaching</li>
-        <li>Final project presentation</li>
-        <li>Public Q&A session</li>
-      </ul>
-    </div>
+    <div class="card"><h4>Module 1 – Websites, Documents & Presentations</h4><ul><li>How LLMs are trained & major providers</li><li>Generating Markdown, LaTeX, HTML</li><li>No-code research websites</li><li>AI tools for scientific communication</li></ul></div>
+    <div class="card"><h4>Module 2 – AI-Automated Data Analysis</h4><ul><li>Quick data analysis with ChatGPT Code Interpreter</li><li>Automated dashboards with TheBricks</li><li>Dataset processing with Julius</li><li>Automated reports & visualizations</li></ul></div>
+    <div class="card"><h4>Module 3 – GenAI for Research & Text Analysis</h4><ul><li>Efficient literature reviews</li><li>Text classification & sentiment analysis</li><li>Knowledge maps & summarization workflows</li></ul></div>
+    <div class="card"><h4>Module 4 – Custom GPTs & Chatbots</h4><ul><li>LLM architecture, context windows, RAG</li><li>Building domain-specific GPTs</li><li>Interactive chatbots with Botpress</li></ul></div>
+    <div class="card"><h4>Module 5 – AI for Task Automation</h4><ul><li>Email response automations</li><li>AI agents for literature monitoring</li><li>Browser control workflows</li></ul></div>
+    <div class="card"><h4>Module 6 – GenAI for Communication & Outreach</h4><ul><li>AI-generated research summaries</li><li>Scientific figures & diagrams</li><li>Video abstracts with minimal effort</li></ul></div>
+    <div class="card"><h4>Module 7 – Capstone Project & Showcase</h4><ul><li>Peer feedback & coaching</li><li>Final project presentation</li><li>Public Q&A session</li></ul></div>
   </div>
 
   <h3>Assessment & Grading</h3>
@@ -197,7 +139,7 @@ footer{
   <ul>
     <li>Week 1 – <em>coming soon</em></li>
     <li>Week 2 – <em>coming soon</em></li>
-    <li>Week 3 – <em>coming soon</em></li>
+    <li>Week 3 – <strong>Work&nbsp;3:</strong> Automated data-analysis workflow&nbsp;<a href="https://drive.google.com/file/d/1bI0KTkr1bphBNskOeiwkkVTSbmxd26CA/view?usp=sharing" target="_blank" rel="noopener">Report</a></li>
     <li>Week 4 – <em>coming soon</em></li>
     <li>Week 5 – <em>coming soon</em></li>
     <li>Week 6 – <em>coming soon</em></li>
@@ -208,7 +150,10 @@ footer{
 <footer>
   <p>&copy; 2025 Sajjad Jasim | Generative AI for Work & Research Portfolio</p>
 </footer>
-  <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
+
+<!-- Botpress Chatbot Integration -->
+<script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/06/05/18/20250605184456-5Q9ZA4IN.js"></script>
+
 </body>
 </html>
