--- a/index.html
+++ b/index.html
@@ -12,71 +12,18 @@
   --light: #f5f7fa;
   --dark: #343a40;
 }
-body{
-  font-family: Arial, sans-serif;
-  margin:0;
-  color:var(--dark);
-  background:var(--light);
-  line-height:1.6;
-}
-header{
-  background:var(--primary);
-  color:#fff;
-  padding:2rem 1rem;
-  text-align:center;
-  box-shadow:0 2px 6px rgba(0,0,0,0.15);
-}
-nav{
-  background:var(--secondary);
-  display:flex;
-  justify-content:center;
-  gap:2rem;
-  padding:0.5rem 1rem;
-  position:sticky;
-  top:0;
-  z-index:1000;
-}
-nav a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:bold;
-  transition:opacity 0.2s ease;
-}
+body{font-family: Arial, sans-serif;margin:0;color:var(--dark);background:var(--light);line-height:1.6;}
+header{background:var(--primary);color:#fff;padding:2rem 1rem;text-align:center;box-shadow:0 2px 6px rgba(0,0,0,0.15);} 
+nav{background:var(--secondary);display:flex;justify-content:center;gap:2rem;padding:0.5rem 1rem;position:sticky;top:0;z-index:1000;}
+nav a{color:#fff;text-decoration:none;font-weight:bold;transition:opacity 0.2s ease;}
 nav a:hover{opacity:0.75;}
-section{
-  max-width:900px;
-  margin:2rem auto;
-  padding:0 1rem;
-}
+section{max-width:900px;margin:2rem auto;padding:0 1rem;}
 h2{color:var(--secondary);margin-top:0;}
 ul{padding-left:1.25rem;}
-.module-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:1rem;
-}
-.card{
-  background:#fff;
-  border:1px solid #d3d9df;
-  border-radius:8px;
-  padding:1rem;
-  box-shadow:0 2px 4px rgba(0,0,0,0.05);
-}
-.profile-img{
-  width:150px;
-  height:150px;
-  border-radius:50%;
-  object-fit:cover;
-  border:3px solid var(--secondary);
-  float:left;
-  margin:0 1rem 1rem 0;
-}
-footer{
-  text-align:center;
-  padding:2rem 0;
-  font-size:0.9rem;
-  color:#6c757d;
-}
+.module-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1rem;}
+.card{background:#fff;border:1px solid #d3d9df;border-radius:8px;padding:1rem;box-shadow:0 2px 4px rgba(0,0,0,0.05);}
+.profile-img{width:150px;height:150px;border-radius:50%;object-fit:cover;border:3px solid var(--secondary);float:left;margin:0 1rem 1rem 0;}
+footer{text-align:center;padding:2rem 0;font-size:0.9rem;color:#6c757d;}
 </style>
 </head>
 <body>
@@ -139,7 +86,7 @@ footer{
   <ul>
     <li>Week 1 – <em>coming soon</em></li>
     <li>Week 2 – <em>coming soon</em></li>
-    <li>Week 3 – <strong>Work&nbsp;3:</strong> Automated data-analysis workflow&nbsp;<a href="https://drive.google.com/file/d/1bI0KTkr1bphBNskOeiwkkVTSbmxd26CA/view?usp=sharing" target="_blank" rel="noopener">Report</a></li>
+    <li>Week 3 – <a href="https://drive.google.com/file/d/1bI0KTkr1bphBNskOeiwkkVTSbmxd26CA/view?usp=sharing" target="_blank" rel="noopener">Data Analyst Job Market Analysis Report</a></li>
     <li>Week 4 – <em>coming soon</em></li>
     <li>Week 5 – <em>coming soon</em></li>
     <li>Week 6 – <em>coming soon</em></li>
