--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ footer{
     <li>Week 3 – <a href="https://drive.google.com/file/d/1bI0KTkr1bphBNskOeiwkkVTSbmxd26CA/view?usp=sharing" target="_blank" rel="noopener">Data Analyst Job Market Analysis Report</a></li>
     <li>Week 4 – <em>coming soon</em></li>
     <li>Week 5 – <em>coming soon</em></li>
-    <li>Week 6 – <em>coming soon</em></li>
+    <li>Week 6 – <a href="https://drive.google.com/file/d/1ecAJRcO20u1Cob19sWdl3DfDPThq9u-6/view?usp=sharing" target="_blank" rel="noopener">Designing Informational Products with GenAI Tools</a></li>
     <li>Week 7 – <em>coming soon</em></li>
   </ul>
 </section>
